hphp/hack/test/typecheck/as_expression/primitive2.php.exp
File "primitive2.php", line 7, characters 5-6:
Invalid argument (Typing[4110])
File "primitive2.php", line 3, characters 12-14:
Expected int
File "primitive2.php", line 6, characters 8-17:
But got ?int
